version-23.2/manage/kubernetes/security/sasl-kubernetes.mdx
---
title: Configure SASL for Redpanda in Kubernetes
tags:
  - Kubernetes
  - Helm configuration
description: Use the Simple Authentication and Security Layer (SASL) framework to provide authentication between Redpanda brokers and clients.
linkRoot: ../../../../
deployment: Kubernetes
contextLinks:
  - name: 'Linux'
    to: 'manage/security/authentication'
  - name: 'Kubernetes'
    to: manage/kubernetes/security/sasl-kubernetes
---

<head>
    <meta name="title" content="Configure Redpanda SASL in Kubernetes | Redpanda Docs"/>
    <meta name="description" content="Use the Simple Authentication and Security Layer (SASL) framework to provide authentication between Redpanda brokers and clients."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/security/sasl-kubernetes/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from '../shared/_values-yaml.mdx'
import ContextLink from '@site/src/components/ContextButton.js'

<ContextLink frontmatter={frontMatter}
/>

Simple Authentication and Security Layer (SASL) is a framework for adding authentication support to connection-based protocols. In the Redpanda Helm chart, enabling SASL provides authentication between all Redpanda brokers and clients. For example, you can give clients a username and password for authentication as well as restrict their access to the cluster through access control lists (ACLs).

:::note
For secure authentication, you must use [TLS encryption](../kubernetes-tls). TLS is enabled in the Helm chart by default.
:::

## Supported authentication mechanisms

The Redpanda Helm chart supports SASL/SCRAM (Salted Challenge Response Authentication Mechanism), also known as SCRAM.

SCRAM provides strong encryption for usernames and passwords by default and does not require an external data store for user information. Redpanda supports  `SCRAM-SHA-256` and `SCRAM-SHA-512` authentication mechanisms.

The Helm chart does not currently support Kerberos authentication.

## Enable SASL

Enable SASL for the cluster and create a superuser that can grant permissions to additional users through ACLS.

To create one or more superusers, you must define the following credentials:

- Username
- Password

You can also set the authentication mechanism for each superuser. Or, you can set the default authentication mechanism for all superusers in the `auth.sasl.mechanism` configuration. This default authentication mechanism is applied to all superusers that don't include an authentication mechanism.

You can define these credentials in [Secrets](#use-secrets) or in [YAML list items](#use-a-yaml-list).

### Use Secrets

To use a Secret to store superuser credentials, do the following:

1. Create a file in which to store the credentials. Make sure to include an empty line at the end of the file.

  ```bash
  echo '<superuser-name>:<superuser-password>:<superuser-authentication-mechanism>' >> superusers.txt
  ```

  Replace the following placeholders with your own values for the superuser:

    - `<superuser-name>`
    - `<superuser-password>`
    - `<superuser-authentication-mechanism>` (`SCRAM-SHA-256` or `SCRAM-SHA-512`)

1. Use the file to create a Secret in the same namespace as your Redpanda cluster.

  ```bash
  kubectl create secret generic redpanda-superusers --namespace <namespace> --from-file=superusers.txt
  ```

1. Enable SASL and create the superuser using your Secret:

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      auth:
        sasl:
          enabled: true
          secretRef: "redpanda-superusers"
          users: null
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  
  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config">
  <TabItem value="values" label="--values">

  ```yaml title="enable-sasl.yaml"
  auth:
    sasl:
      enabled: true
      secretRef: "redpanda-superusers"
      users: null
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --values enable-sasl.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
    --set auth.sasl.enabled=true \
    --set auth.sasl.secretRef=redpanda-superusers
    --set auth.sasl.users=null
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

  :::note
  <ValuesYaml path="auth.sasl"/>
  :::

### Use a YAML list

To use a YAML list item to store superuser credentials in configuration settings, do the following.

Replace the following placeholders with your own values for the superuser:

- `<superuser-name>`
- `<superuser-password>`
- `<superuser-authentication-mechanism>` (`SCRAM-SHA-256` or `SCRAM-SHA-512`)

:::info
If you have an existing Secret in your `redpanda` namespace called `redpanda-superusers`, make sure to either delete that Secret or replace `auth.sasl.secretRef` in these examples with the name of a Secret that doesn't currently exist in the namespace.

When you use a YAML list to specify superusers, the Helm chart creates a Secret using the value of `auth.sasl.secretRef` as the Secret's name, and stores those superusers in the Secret as a TXT file. If the Secret already exists in the namespace when you deploy Redpanda, the following error is displayed:

`Error: UPGRADE FAILED: rendered manifests contain a resource that already exists. Unable to continue with update: Secret`
:::

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

```yaml title="redpanda-cluster.yaml"
apiVersion: cluster.redpanda.com/v1alpha1
kind: Redpanda
metadata:
  name: redpanda
spec:
  chartRef: {}
  clusterSpec:
    auth:
      sasl:
        enabled: true
        secretRef: redpanda-superusers
        users:
          - name: <superuser-name>
            password: <superuser-password>
            mechanism: <superuser-authentication-mechanism>
```

```bash
kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
```


</TabItem>
<TabItem value="helm" label="Helm">
<Tabs groupId="helm-config">
<TabItem value="values" label="--values">

```yaml title="enable-sasl.yaml"
auth:
  sasl:
    enabled: true
    secretRef: redpanda-superusers
    users:
      - name: <superuser-name>
        password: <superuser-password>
        mechanism: <superuser-authentication-mechanism>
```

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --values sasl-enable.yaml --reuse-values
```

</TabItem>
<TabItem value="flags" label="--set">

```bash
helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --set auth.sasl.enabled=true \
  --set auth.sasl.secretRef=redpanda-superusers \
  --set "auth.sasl.users[0].name=<superuser-name>" \
  --set "auth.sasl.users[0].password=<superuser-password>" \
  --set "auth.sasl.users[0].mechanism=<superuser-authentication-mechanism>"
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

## Create users

When you have SASL enabled for your Redpanda cluster and you have at least one superuser, you can create new users that are not superusers. By default, these users don't have any permissions in the cluster.

:::tip
As a security best practice, superusers should not run commands on the cluster. Instead, run commands as new users.
:::

To create the user `myuser` with a password `changethispassword`, run `rpk acl user create`:

<Tabs groupId="tls" queryString>
<TabItem value="enabled" label="TLS Enabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk acl user create myuser -p 'changethispassword' \
  --admin-api-tls-enabled \
  --admin-api-tls-truststore <path-to-admin-api-ca-certificate> \
  -X admin.hosts=<broker-url>:<admin-api-port>
```

</TabItem>
<TabItem value="disabled" label="TLS Disabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk acl user create myuser -p 'changethispassword' \
  -X admin.hosts=<broker-url>:<admin-api-port>
```

</TabItem>
</Tabs>

:::tip
Put passwords in single quotes to avoid conflicts with special characters. Enclosing characters in single quotes preserves the literal value of each character.
:::

## Grant permissions

By default, new users don't have any permissions in the cluster. The superuser can grant permissions to new users through ACLs.

1. Use the [`rpk acl create`](../../../../reference/rpk/rpk-acl/rpk-acl-create) command to grant `create` and `describe` permissions to `myuser` in the cluster:

  <Tabs groupId="tls" queryString>
  <TabItem value="enabled" label="TLS Enabled">

  ```bash
  kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
    rpk acl create --allow-principal User:myuser \
    --operation create,describe \
    --cluster \
    --user <superuser-name> \
    --password '<superuser-password>' \
    --sasl-mechanism <superuser-authentication-mechanism> \
    --tls-enabled \
    --tls-truststore <path-to-ca-certificate> \
    -X brokers=<broker-urls>
  ```

  </TabItem>
  <TabItem value="disabled" label="TLS Disabled">

  ```bash
  kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
    rpk acl create --allow-principal User:myuser \
    --operation create,describe \
    --cluster \
    --user <superuser-name> \
    --password '<superuser-password>' \
    --sasl-mechanism <superuser-authentication-mechanism> \
    -X brokers=<broker-urls>
  ```

  </TabItem>
  </Tabs>

  :::note
  A user must be explicitly granted `describe` privileges for topics. Even if a user has `describe` privileges for a cluster, it does not mean that the user is automatically granted `describe` privileges for a specific topic.
  :::

1. Grant the new user permissions for a specific topic. The following command grants `describe` privileges to a topic called `myfirsttopic`:

  <Tabs groupId="tls" queryString>
  <TabItem value="enabled" label="TLS Enabled">

  ```bash
  kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
    rpk acl create --allow-principal User:myuser \
    --operation describe \
    --topic myfirsttopic \
    --user <superuser-name> \
    --password '<superuser-password>' \
    --sasl-mechanism <superuser-authentication-mechanism> \
    --tls-enabled \
    --tls-truststore <path-to-ca-certificate> \
    -X brokers=<broker-url>:<kafka-api-port>
  ```

  </TabItem>
  <TabItem value="disabled" label="TLS Disabled">

  ```bash
  kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
    rpk acl create --allow-principal User:myuser \
    --operation describe \
    --topic myfirsttopic \
    --user <superuser-name> \
    --password '<superuser-password>' \
    --sasl-mechanism <superuser-authentication-mechanism> \
    -X brokers=<broker-url>:<kafka-api-port>
  ```

  </TabItem>
  </Tabs>

## Use rpk to authenticate to Redpanda using SASL

Authenticate a new user to Redpanda with the user's credentials to start working with the cluster.

:::note
The `--sasl-mechanism` flag is required. This flag tells rpk the authentication method to use to authenticate the user.
:::

To create a topic, run [`rpk topic create`](../../../../reference/rpk/rpk-topic/rpk-topic-create):

<Tabs groupId="tls" queryString>
<TabItem value="enabled" label="TLS Enabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk topic create myfirsttopic \
  --user myuser \
  --password 'changethispassword' \
  --sasl-mechanism SCRAM-SHA-256 \
  --tls-enabled \
  --tls-truststore <path-to-ca-certificate> \
  -X brokers=<broker-url>:<kafka-api-port>
```

</TabItem>
<TabItem value="disabled" label="TLS Disabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk topic create myfirsttopic \
  --user myuser \
  --password 'changethispassword' \
  --sasl-mechanism SCRAM-SHA-256 \
  -X brokers=<broker-url>:<kafka-api-port>
```

</TabItem>
</Tabs>

To describe the topic, run [`rpk topic describe`](../../../../reference/rpk/rpk-topic/rpk-topic-describe):

<Tabs groupId="tls" queryString>
<TabItem value="enabled" label="TLS Enabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk topic describe myfirsttopic \
  --user myuser \
  --password 'changethispassword' \
  --sasl-mechanism SCRAM-SHA-256 \
  --tls-enabled \
  --tls-truststore <path-to-ca-certificate> \
  -X brokers=<broker-url>:<kafka-api-port>
```

</TabItem>
<TabItem value="disabled" label="TLS Disabled">

```bash
kubectl exec --namespace <namespace> -c redpanda redpanda-0 -- \
  rpk topic describe myfirsttopic \
  --user myuser \
  --password 'changethispassword' \
  --sasl-mechanism SCRAM-SHA-256 \
  -X brokers=<broker-url>:<kafka-api-port>
```

</TabItem>
</Tabs>

## Suggested reading

- Learn more about [ACLs](../../../security/authorization/#ACLs).
- See the [`rpk acl`](../../../../reference/rpk/rpk-acl) command reference.
- [Redpanda Helm Specification](../../../../reference/redpanda-helm-spec#authsasl)
- [Redpanda CRD Reference](../../../../reference/crd)
